<resources>
    <string name="app_name">WGU Mobile App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="main_menu_selector">
        <item>Current Term Details</item>
        <item>View/Edit All Terms</item>
        <item>View/Edit All Courses</item>
        <item>Current Notes</item>
        <item>Upcoming Assessments</item>
    </string-array>
    <string name="title_activity_view_edit_all_courses">ViewEditAllCoursesActivity</string>
    <string name="term_name">Give the Term a Name</string>
    <string name="start_date">Select a Start Date</string>
    <string name="end_date">Select an End Date</string>
    <string name="course_title">Enter a Course Title</string>
    <string-array name="course_status_array">
        <item>In Progress</item>
        <item>Completed!</item>
        <item>Dropped</item>
        <item>Plan to Take</item>
    </string-array>
    <string-array name="assessmentType">
        <item>Objective</item>
        <item>Performance</item>
    </string-array>
    <string name="course_mentors_name">Please Enter Course Mentors Name</string>
    <string name="phone_number">Enter Course Mentors Number</string>
    <string name="email">Enter Course Mentors Email</string>
    <string name="action_settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="take_photo">Add Photo</string>
    <string name="home">WGU Tracker</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
