<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aphart.wgumobileapp.AddTermFragment"
    >

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/start_date"
        android:id="@+id/startDateLabel"
        android:layout_below="@+id/termName"
        android:layout_alignParentStart="true"
        android:layout_margin="20dp"
        android:textColor="@color/wguBlue" />



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/termStartDateSelector"
        android:focusable="false"
        android:layout_alignBottom="@+id/startDateLabel"
        android:layout_alignParentEnd="true"
        android:hint="MM/DD/YYYY"
        android:textColor="@color/wguBlue"
        android:textColorHint="@color/wguBronzeGold"
        android:textIsSelectable="false"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/end_date"
        android:id="@+id/endDateLabel"
        android:textColor="@color/wguBlue"
        android:layout_below="@+id/startDateLabel"
        android:layout_alignStart="@+id/startDateLabel" />



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/termEndDateSelector"
        android:focusable="false"
        android:layout_alignBottom="@+id/endDateLabel"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:textColor="@color/wguBlue"
        android:textColorHint="@color/wguBronzeGold"
        android:hint="MM/DD/YYYY"/>

    <EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text=""
    android:id="@+id/termName"
    android:layout_centerHorizontal="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true"
    android:textColorHint="@color/wguBronzeGold"
    android:textColor="@color/wguBlue"
    android:textAlignment="center"
    android:layout_alignParentTop="true"
    android:paddingTop="30dp"
    android:hint="Create a Term Name"
    android:inputType="textPersonName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Alert me a week prior to start"
        android:id="@+id/textView4"
        android:layout_below="@+id/termEndDateSelector"
        android:layout_alignStart="@+id/endDateLabel"
        android:layout_marginTop="20dp"
        android:textColor="@color/wguBlue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Alert me a week prior to end"
        android:id="@+id/textView5"
        android:textColor="@color/wguBlue"
        android:layout_marginTop="75dp"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Yes"
        android:id="@+id/warnStart"
        android:checked="true"
        android:clickable="true"
        android:layout_below="@+id/textView4"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Yes"
        android:id="@+id/warnEnd"
        android:checked="true"
        android:clickable="true"
        android:layout_below="@+id/textView5"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Is this the current term?"
        android:textColor="@color/wguBlue"
        android:id="@+id/textView10"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginTop="87dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Yes"
        android:id="@+id/currentTermCheck"
        android:textColor="@color/wguBlue"
        android:layout_alignBottom="@+id/textView10"
        android:layout_alignParentEnd="true" />
<GridLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/textView10"
    android:layout_marginTop="60dp"
    android:id="@+id/gridLayout">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/termSubmitButton"
        android:layout_marginBottom="64dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="30dp"
        android:textColor="@color/wguBlue"
        android:layout_row="0"
        android:layout_column="0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/termCancelButton"
        android:layout_alignTop="@+id/termSubmitButton"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:textColor="@color/wguBlue"
        android:layout_row="0"
        android:layout_column="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Associated Courses"
        android:id="@+id/associatedCourses"
        android:textColor="@color/wguBlue"
        android:layout_below="@+id/deleteTermButton"
        android:layout_toStartOf="@+id/termSubmitButton"
        android:layout_row="4"
        android:layout_column="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete"
        android:id="@+id/deleteTermButton"
        android:layout_alignBottom="@+id/termSubmitButton"
        android:layout_centerHorizontal="true"
        android:textColor="@color/wguBlue"
        android:layout_row="0"
        android:layout_column="2" />

</GridLayout>
</RelativeLayout>
    </ScrollView>
</RelativeLayout>
